fix: apply Guardian compliance fixes (6 issues addressed)