@@ -10,7 +10,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * Maps between domain Order/OrderItem and JPA entities.
@@ -43,7 +42,7 @@ public class OrderPersistenceMapper {
     public Order toDomain(OrderEntity entity) {
         List<OrderItem> items = entity.getItems().stream()
                 .map(i -> new OrderItem(i.getProductId(), i.getQuantity(), new Money(i.getUnitPrice(), entity.getCurrency())))
-                .collect(Collectors.toList());
+                .toList();
         Money total = new Money(entity.getTotalAmount(), entity.getCurrency());
         return Order.reconstitute(
                 entity.getId(),
@@ -57,5 +56,38 @@ public class OrderPersistenceMapper {
 
     public void updateEntityStatus(OrderEntity entity, OrderStatus status) {
         entity.setStatus(status.name());
+    }
+
+    /**
+     * Updates an existing entity from the domain order, preserving existing item IDs.
+     * Syncs status, totalAmount, currency and items (by index; new items get new IDs).
+     */
+    public void updateEntityFromDomain(OrderEntity entity, Order domain) {
+        entity.setStatus(domain.getStatus().name());
+        entity.setTotalAmount(domain.getTotalAmount().amount());
+        entity.setCurrency(domain.getTotalAmount().currency());
+        List<OrderItem> domainItems = domain.getItems();
+        List<OrderItemEntity> entityItems = entity.getItems();
+        int i = 0;
+        for (; i < domainItems.size(); i++) {
+            OrderItem di = domainItems.get(i);
+            if (i < entityItems.size()) {
+                OrderItemEntity ei = entityItems.get(i);
+                ei.setProductId(di.productId());
+                ei.setQuantity(di.quantity());
+                ei.setUnitPrice(di.unitPrice().amount());
+            } else {
+                entityItems.add(new OrderItemEntity(
+                        UUID.randomUUID(),
+                        entity,
+                        di.productId(),
+                        di.quantity(),
+                        di.unitPrice().amount()
+                ));
+            }
+        }
+        if (i < entityItems.size()) {
+            entityItems.subList(i, entityItems.size()).clear();
+        }
     }
 }
